# barsane

./: .gitignore  CMakeLists.txt  Makefile  Makefile.settings  README.md  barzane.cpp
.github/workflows/: ccpp.yml
doc/: lexer.l
include/: AST.h  Error.h  ErrorHandler.h  Indexer.h  Indexer.hxx  Lexer.h  Node.h  Parser.h  Symbol.h  str.h  str.hxx
include/node/: Affects.h  Builtins.h  Declarations.h
lib/include/: AST.h  Error.h  ErrorHandler.h  Indexer.h  Indexer.hxx  Lexer.h  Node.h  Node.hxx  Parser.h  str.h  str.hxx
lib/src/: AST.cpp  ErrorHandler.cpp  Lexer.cpp  Parser.cpp  Symbol.cpp
src/: AST.cpp  ErrorHandler.cpp  Lexer.cpp  Parser.cpp  Symbol.cpp
test/: ErrorHandlerTest.cpp  ErrorHandlerTest.h  IndexerTest.cpp  IndexerTest.h  LexerTest.cpp  LexerTest.h  MainTest.cpp  Makefile  ParserTest.cpp  ParserTest.h  StrTest.cpp  StrTest.h  SymbolTest.cpp  SymbolTest.h  expect.h
test/include/: ASTTest.h  AffectTest.h  AffectsTest.h  BooleanTest.h  BuiltinsTest.h  DeclarationTest.h  DeclarationsTest.h  ErrorHandlerTest.h  ExpressionTest.h  FactorTest.h  IdTest.h  IdsTest.h  IndexerTest.h  InstructionTest.h  InstructionsTest.h  LexerTest.h  NumberTest.h  OperationTest.h  ParserTest.h  PrintTest.h  StrTest.h  StringTest.h  TermTest.h  Test.h  TypeTest.h
test/src/: ASTTest.cpp  AffectTest.cpp  AffectsTest.cpp  BooleanTest.cpp  BuiltinsTest.cpp  DeclarationTest.cpp  DeclarationsTest.cpp  ErrorHandlerTest.cpp  ExpressionTest.cpp  FactorTest.cpp  IdTest.cpp  IdsTest.cpp  IndexerTest.cpp  InstructionTest.cpp  InstructionsTest.cpp  LexerTest.cpp  MainTest.cpp  (+9 more)
(+36 files in other folders)
